Added Age verification page

--- a/Week2-WebLayout/public/index.html
+++ b/Week2-WebLayout/public/index.html
@@ -37,7 +37,7 @@
             <li><a href="./about.html">About</a></li>
           </ul>
         </nav>
-        <p>Author: <a href="https://github.com/chan1ks">Rajesh Rajchal</a></p>
+        <p>Author: <a href="https://github.com/rrajchal/MSSE661WebSoftwareDevelopment/tree/main/Week2-WebLayout">Rajesh Rajchal</a></p>
       </footer>
     </div>
   </body>
