Added login and logout with token

--- a/Week5-UnitTestingAndES6/public/home.html
+++ b/Week5-UnitTestingAndES6/public/home.html
@@ -33,8 +33,9 @@
             <li><a href="/about.html">About</a></li>
           </ul>
         </nav>
-        <p>Author: <a href="https://github.com/chan1ks">Rajesh Rajchal</a></p>
+        <p>Author: <a href="https://github.com/rrajchal/MSSE661WebSoftwareDevelopment/tree/main/Week5-UnitTestingAndES6">Rajesh Rajchal</a></p>
       </footer>
     </div>
   </body>
+  <script src="./src/app.js"></script>
 </html>
