--- a/Week6-AjaxAndCRUD/public/home.html
+++ b/Week6-AjaxAndCRUD/public/home.html
@@ -1,41 +1,99 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./css/styles.css" />
-    <link rel="stylesheet" href="./css/flexbox.css" />
-    <title>Home</title>
-  </head>
-  <body>
-    <div class="main wrapper">
-      <header>
-        <nav>
-          <ul>
-            <li><a href="/">Home</a></li>
-            <li><a href="./about.html">About</a></li>
-          </ul>
-          <a href="" onclick="doLogout(event)">Logout</a>
-        </nav>
-      </header>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./css/styles.css">
+  <link rel="stylesheet" href="./css/flexbox.css">
+  <title>Task Management</title>
+</head>
+<body>
+  <div class="main wrapper">
+    <header>
+      <nav>
+        <ul>
+          <li><a href="/">Home</a></li>
+          <li><a href="./about.html">About</a></li>
+        </ul>
+      </nav>
+    </header>
 
-      <div class="content">
-        <div class="center">
-          <h1>Welcome to the Home Page</h1>
-          <p>This is the home page after login. Some stuff about a site.</p>
+    <div class="content">
+      <div class="center">
+        <h2>Task Management</h2>
+        <div class="task-buttons">
+          <button onclick="displayTasks()">Display All Tasks</button>
+          <button onclick="showAddTaskForm()">Add Task</button>
+          <button onclick="showUpdateTaskForm()">Update Task</button>
+          <button onclick="showDeleteTaskForm()">Delete Task</button>
         </div>
-      </div>
 
-      <footer>
-        <nav>
-          <ul>
-            <li><a href="/">Home</a></li>
-            <li><a href="/about.html">About</a></li>
-          </ul>
-        </nav>
-        <p>Author: <a href="https://github.com/rrajchal/MSSE661WebSoftwareDevelopment/tree/main/Week5-UnitTestingAndES6">Rajesh Rajchal</a></p>
-      </footer>
+        <div id="tasks-display" style="display: none;">
+          <h3>All Tasks</h3>
+          <table>
+            <thead>
+              <tr>
+                <th>Task ID</th>
+                <th>Description</th>
+                <th>Completed</th>
+              </tr>
+            </thead>
+            <tbody id="tasks-table-body">
+              <!-- Tasks will be displayed here -->
+            </tbody>
+          </table>
+        </div>
+
+        <div id="add-task-form" class="form-container" style="display: none;">
+          <h3>Add Task</h3>
+          <form onsubmit="addTask(event)">
+            <label for="description">Description:</label>
+            <input type="text" id="description" name="description" required>
+            <label for="completed">Completed:</label>
+            <input type="checkbox" id="completed" name="completed">
+            <button type="submit">Add Task</button>
+          </form>
+        </div>
+
+        <div id="update-task-form" class="form-container" style="display: none;">
+          <h3>Update Task</h3>
+          <form onsubmit="updateTask(event)">
+            <label for="task-id">Task ID:</label>
+            <input type="text" id="task-id" name="task-id" required>
+            <label for="description">Description:</label>
+            <input type="text" id="update-description" name="description" required>
+            <label for="completed">Completed:</label>
+            <input type="checkbox" id="update-completed" name="completed">
+            <button type="submit">Update Task</button>
+          </form>
+        </div>
+
+        <div id="delete-task-form" class="form-container" style="display: none;">
+          <h3>Delete Task</h3>
+          <form onsubmit="deleteTask(event)">
+            <label for="task-id">Task ID:</label>
+            <input type="text" id="delete-task-id" name="task-id" required>
+            <button type="submit">Delete Task</button>
+          </form>
+        </div>
+
+        <div id="message" style="display: none; color: red;"></div>
+      </div>
     </div>
-  </body>
-  <script src="./src/app.js"></script>
+
+    <footer>
+      <nav>
+        <ul>
+          <li><a href="/">Home</a></li>
+          <li><a href="./about.html">About</a></li>
+        </ul>
+      </nav>
+      <p>Author: <a href="https://github.com/rrajchal/MSSE661WebSoftwareDevelopment/tree/main/Week5-UnitTestingAndES6">Rajesh Rajchal</a></p>
+    </footer>
+  </div>
+  <script src="./src/service-helpers.js"></script>
+  <script src="./src/tasks.service.js"></script>
+  <script src="./src/auth.service.js"></script>
+  <script src="./src/tasks.js"></script>
+</body>
 </html>
