--- a/Week6-AjaxAndCRUD/public/about.html
+++ b/Week6-AjaxAndCRUD/public/about.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/styles.css" />
-    <link rel="stylesheet" href="./css/flexbox.css" />
     <title>About</title>
   </head>
   <body>
@@ -31,7 +30,7 @@
             <li><a href="./about.html">About</a></li>
           </ul>
         </nav>
-        <p>Author: <a href="https://github.com/chan1ks">Morgan Worrell</a></p>
+        <p>Author: <a href="https://github.com/rrajchal/MSSE661WebSoftwareDevelopment/tree/main/Week6-AjaxAndCRUD">Rajesh Rajchal</a></p>
       </footer>
     </div>
   </body>
