Code organized and enhanced UI and UX

--- a/Week7-UXAndUIDesign/public/index.html
+++ b/Week7-UXAndUIDesign/public/index.html
@@ -20,7 +20,7 @@
       <div class="content">
         <div class="center">
           <h2>Login</h2>
-          <form novalidate onsubmit="doLogin(event)">
+          <form class="login-form" novalidate onsubmit="doLogin(event)">
             <label for="username">
               <span>Username:</span>
               <input id="username" type="text" placeholder="Username" required />
